fixed misc. layout issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,42 +42,6 @@ html {
     }
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --foreground-rgb: 255, 255, 255;
-        --background-start-rgb: 0, 0, 0;
-        --background-end-rgb: 0, 0, 0;
-
-        --primary-glow: radial-gradient(
-            rgba(1, 65, 255, 0.4),
-            rgba(1, 65, 255, 0)
-        );
-        --secondary-glow: linear-gradient(
-            to bottom right,
-            rgba(1, 65, 255, 0),
-            rgba(1, 65, 255, 0),
-            rgba(1, 65, 255, 0.3)
-        );
-
-        --tile-start-rgb: 2, 13, 46;
-        --tile-end-rgb: 2, 5, 19;
-        --tile-border: conic-gradient(
-            #ffffff80,
-            #ffffff40,
-            #ffffff30,
-            #ffffff20,
-            #ffffff10,
-            #ffffff10,
-            #ffffff80
-        );
-
-        --callout-rgb: 20, 20, 20;
-        --callout-border-rgb: 108, 108, 108;
-        --card-rgb: 100, 100, 100;
-        --card-border-rgb: 200, 200, 200;
-    }
-}
-
 * {
     box-sizing: border-box;
     padding: 0;
@@ -94,6 +58,8 @@ a {
         color-scheme: dark;
     }
 }
+
+/* prose */
 
 .prose blockquote {
     @apply ml-2 border-l-[1px] font-extralight border-slate-500 not-italic;
@@ -194,4 +160,23 @@ data-highlighted-line {
 }
 [data-rehype-pretty-code-title] + pre {
     @apply mt-0 rounded-t-none border-t-0;
+}
+
+/* Light mode styles (default) */
+code[data-theme*=" "],
+code[data-theme*=" "] span {
+    color: var(--shiki-light);
+    background-color: var(--shiki-light-bg);
+}
+
+/* Dark mode styles */
+:is(.dark code[data-theme*=" "], .dark code[data-theme*=" "] span) {
+    color: var(--shiki-dark);
+    background-color: var(--shiki-dark-bg);
+}
+/* Dark mode styles */
+.dark code[data-theme*=" "],
+.dark code[data-theme*=" "] span {
+    color: var(--shiki-dark);
+    background-color: var(--shiki-dark-bg);
 }
